# maskbit

./: pyproject.toml  requirements.txt
configs/generator/: maskbit_bern.yaml
configs/tokenizer/: maskbit_tokenizer_18bit_celeba_bern.yaml  maskbit_tokenizer_18bit_celeba_bern_ent.yaml  maskbit_tokenizer_18bit_celeba_default.yaml  maskbit_tokenizer_24bit_bern.yaml
maskbit/data/: webdataset_reader.py
maskbit/evaluator/: evaluator.py
maskbit/modeling/: bert.py  conv_vqgan.py  taming_vqgan.py
maskbit/modeling/modules/: discriminator.py  gan_utils.py
maskbit/modeling/quantizer/: lookup_free.py  quantizer.py
maskbit/scripts/: create_sharded_celeba_dataset.py  create_sharded_dataset.py  eval_tokenizer.py  train_maskbit.py  train_tokenizer.py
